Chore executions and request specs added
