# app/models/chore.rb
@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 
-class Chore < ApplicationRecord # rubocop:todo Style/Documentation
+# model for chore
+class Chore < ApplicationRecord
   scope :for_user, lambda { |user|
                      where(manager_id: user.id).or(where(executor_id: user.id))
                    }
@@ -10,6 +11,7 @@ class Chore < ApplicationRecord # rubocop:todo Style/Documentation
   belongs_to :manager, class_name: 'User', foreign_key: :manager_id
   belongs_to :executor, class_name: 'User', foreign_key: :executor_id
   belongs_to :team
+  has_many :chore_executions
 
   validates :name, presence: true, length: { minimum: 2, maximum: 24 }
   validates :description, length: { minimum: 3 }
