# swagger/v1/swagger.yaml
@@ -4,6 +4,147 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/teams/{team_id}/chores/{chore_id}/chore_executions":
+    post:
+      summary: Create a chore execution
+      tags:
+      - Chore executions
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: team_id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      - name: chore_id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      responses:
+        '201':
+          description: correct request
+          content:
+            application/json:
+              examples:
+                chore: {}
+              schema:
+                type: object
+                properties: {}
+        '422':
+          description: invalid request
+          content:
+            application/json:
+              examples:
+                chore: {}
+              schema:
+                type: object
+                properties: {}
+        '403':
+          description: unauthorized request
+    get:
+      summary: Index chore executions for a given task
+      tags:
+      - Chore executions
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: team_id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      - name: chore_id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      responses:
+        '200':
+          description: executor or team manager request
+          content:
+            application/json:
+              examples:
+                chore_executions:
+                  value:
+                  - id: 594
+                    date: '2023-11-23T13:30:33.000Z'
+                    chore_id: 999
+                    created_at: '2023-11-30T13:36:33.469Z'
+                    updated_at: '2023-11-30T13:36:33.469Z'
+                  - id: 595
+                    date: '2023-11-23T13:30:33.000Z'
+                    chore_id: 999
+                    created_at: '2023-11-30T13:36:33.471Z'
+                    updated_at: '2023-11-30T13:36:33.471Z'
+              schema:
+                type: array
+                properties:
+                - type: object
+                  properties:
+                    id:
+                      type: integer
+                    date:
+                      type: string
+                    chore_id:
+                      type: integer
+                    created_at:
+                      type: datetime
+                    updated_at:
+                      type: datetime
+        '422':
+          description: from wrong user
+          content:
+            application/json:
+              examples:
+                chore_non_existent:
+                  value:
+                    error: Chore doesn't exist!
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '403':
+          description: executor or team manager request
+  "/api/v1/teams/{team_id}/chores/{chore_id}/chore_executions/{id}":
+    delete:
+      summary: Delete a chore execution
+      tags:
+      - Chore executions
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: team_id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      - name: chore_id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      - name: id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      responses:
+        '204':
+          description: correct request
+        '422':
+          description: non existent chore
+        '403':
+          description: unauthorized request
   "/api/v1/teams/{team_id}/chores":
     post:
       summary: Create a chore
